refactor: 문자열 null 체크, isBlank()로 변경